header__end-problems

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
-            <h1 class="header__logo-title">Indicorp</h1>
+            <h1 class="header__logo">Indicorp</h1>
             <ul class="list__menu">
                 <li class="menu__item">
                     <a href="#0" class="link__menu">Home</a>
@@ -27,21 +29,23 @@
                     <a href="#0" class="link__menu">Contact</a>
                 </li>
             </ul>
+
+            <img src="./imagies/navbar-toggler.svg" alt="" class="header__burger-nav">
         </nav>
         <div class="header__container">
             <div class="header__container-inner">
-                <h1 class="header__inner-title">
+                <h1 class="header__title">
                     EMPOWER YOUR BUSINESS
                 </h1>
-                <div class="header__inner-desk">
+                <p class="header__desk">
                     We know how large objects will act,
                     but things on a small scale.
-                </div>
+                </p>
                 <div class="header__buttons">
-                    <button class="header__btn">
+                    <button class="header__btn ">
                         Get Quote Now
                     </button>
-                    <button class="header__btn">
+                    <button class="header__btn header__btn-second">
                         Learn More
                     </button>
                 </div>
@@ -52,27 +56,28 @@
         </div>
         <div class="header__items-cards">
             <div class="header__item-card">
-                <img src="" alt="" class="header__item--card-pic">
-                <h2 class="header__item--card-title"></h2>
-                <div class="header__item--card-desc">We focus on ergonomics and
-                    meeting you where you work. </div>
+                <img src="/imagies/header__icon-1.svg" alt="" class="header__item--card-pic">
+                <h2 class="header__item--card-title">Digital Marketing</h2>
+                <p class="header__item--card-desc">We focus on ergonomics and
+                    meeting you where you work. </p>
 
             </div>
             <div class="header__item-card">
-                <img src="" alt="" class="header__item--card-pic">
-                <h2 class="header__item--card-title"></h2>
-                <div class="header__item--card-desc">Just type what's on your mind
-                    and we'll get you there.</div>
+                <img src="/imagies/header__icon-2.svg" alt="" class="header__item--card-pic">
+                <h2 class="header__item--card-title">National top 50 firms</h2>
+                <p class="header__item--card-desc">Just type what's on your mind
+                    and we'll get you there.</p>
 
             </div>
 
             <div class="header__item-card">
-                <img src="" alt="" class="header__item--card-pic">
-                <h2 class="header__item--card-title"></h2>
-                <div class="header__item--card-desc">
+                <img src="/imagies/header_icon-3.svg" alt="" class="header__item--card-pic ">
+               
+                <h2 class="header__item--card-title"> Digital Marketing</h2>
+                <p class="header__item--card-desc">
                     the quick fox jumps over the
                     lazy dogh
-                </div>
+                </p>
 
             </div>
         </div>
