--- a/index.html
+++ b/index.html
@@ -1,214 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <nav class="nav">
-            <h1 class="header__logo">Indicorp</h1>
-            <ul class="list__menu">
-                <li class="menu__item">
-                    <a href="#0" class="link__menu">Home</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#0" class="link__menu">Product</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#0" class="link__menu">Pricing</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#0" class="link__menu">Contact</a>
-                </li>
-            </ul>
+      <nav class="nav">
+        <h1 class="header__logo">Indicorp</h1>
+        <ul class="list__menu">
+          <li class="menu__item">
+            <a href="#0" class="link__menu">Home</a>
+          </li>
+          <li class="menu__item">
+            <a href="#0" class="link__menu">Product</a>
+          </li>
+          <li class="menu__item">
+            <a href="#0" class="link__menu">Pricing</a>
+          </li>
+          <li class="menu__item">
+            <a href="#0" class="link__menu">Contact</a>
+          </li>
+        </ul>
 
-            <img src="./imagies/navbar-toggler.svg" alt="" class="header__burger-nav">
-        </nav>
-        <div class="header__container">
-            <div class="header__container-inner">
-                <h1 class="header__title">
-                    EMPOWER YOUR BUSINESS
-                </h1>
-                <p class="header__desk">
-                    We know how large objects will act,
-                    but things on a small scale.
-                </p>
-                <div class="header__buttons">
-                    <button class="header__btn ">
-                        Get Quote Now
-                    </button>
-                    <button class="header__btn header__btn-second">
-                        Learn More
-                    </button>
-                </div>
-            </div>
-
-
-
+        <img
+          src="./imagies/navbar-toggler.svg"
+          alt=""
+          class="header__burger-nav"
+        />
+      </nav>
+      <div class="header__container">
+        <div class="header__container-inner">
+          <h1 class="header__title">EMPOWER YOUR BUSINESS</h1>
+          <p class="header__desk">
+            We know how large objects will act, but things on a small scale.
+          </p>
+          <div class="header__buttons">
+            <button class="header__btn">Get Quote Now</button>
+            <button class="header__btn header__btn-second">Learn More</button>
+          </div>
         </div>
-        <div class="header__items-cards">
-            <div class="header__item-card">
-                <img src="/imagies/header__icon-1.svg" alt="" class="header__item--card-pic">
-                <h2 class="header__item--card-title">Digital Marketing</h2>
-                <p class="header__item--card-desc">We focus on ergonomics and
-                    meeting you where you work. </p>
-
-            </div>
-            <div class="header__item-card">
-                <img src="/imagies/header__icon-2.svg" alt="" class="header__item--card-pic">
-                <h2 class="header__item--card-title">National top 50 firms</h2>
-                <p class="header__item--card-desc">Just type what's on your mind
-                    and we'll get you there.</p>
-
-            </div>
-
-            <div class="header__item-card">
-                <img src="/imagies/header_icon-3.svg" alt="" class="header__item--card-pic ">
-
-                <h2 class="header__item--card-title"> Digital Marketing</h2>
-                <p class="header__item--card-desc">
-                    the quick fox jumps over the
-                    lazy dogh
-                </p>
-
-            </div>
+      </div>
+      <div class="header__items-cards">
+        <div class="header__item-card">
+          <img
+            src="/imagies/header__icon-1.svg"
+            alt=""
+            class="header__item--card-pic"
+          />
+          <h2 class="header__item--card-title">Digital Marketing</h2>
+          <p class="header__item--card-desc">
+            We focus on ergonomics and meeting you where you work.
+          </p>
         </div>
+        <div class="header__item-card">
+          <img
+            src="/imagies/header__icon-2.svg"
+            alt=""
+            class="header__item--card-pic"
+          />
+          <h2 class="header__item--card-title">National top 50 firms</h2>
+          <p class="header__item--card-desc">
+            Just type what's on your mind and we'll get you there.
+          </p>
+        </div>
+
+        <div class="header__item-card">
+          <img
+            src="/imagies/header_icon-3.svg"
+            alt=""
+            class="header__item--card-pic"
+          />
+
+          <h2 class="header__item--card-title">Digital Marketing</h2>
+          <p class="header__item--card-desc">
+            the quick fox jumps over the lazy dogh
+          </p>
+        </div>
+      </div>
     </header>
 
     <section class="section__why">
-        <div class="inner__why">
-            <div class="inner__why-block--title">
-                <h2 class="inner__why-title">
-                    WHY CHOOSE US
-                </h2>
-                <p class="inner__why-desc">
-                    Problems trying to resolve the conflict between the two major realms
-                    of Classical physics: Newtonian mechanics
-                </p>
-            </div>
-
-            <div class="inner__why-cards">
-                <div class="inner__why-card">
-                    <img src="/imagies/svg/why-pic-1.svg" alt="" class="inner__why-pic">
-                    <span class="inner__why-number">
-                        3K
-                    </span>
-                    <span class="inner__why-subtitle">
-                        CASES DONE
-                    </span>
-                </div>
-                <div class="inner__why-card">
-                    <img src="/imagies/svg/why-pic-2.svg" alt="" class="inner__why-pic">
-                    <span class="inner__why-number">
-                        45
-                    </span>
-                    <span class="inner__why-subtitle">
-                        HAPPY CUSTOMERS
-                    </span>
-                </div>
-                <div class="inner__why-card">
-                    <img src="/imagies/svg/why-pic-3.svg" alt="" class="inner__why-pic">
-                    <span class="inner__why-number">
-                        12+
-                    </span>
-                    <span class="inner__why-subtitle">
-                        AWARD WINNING
-                    </span>
-                </div>
-                <div class="inner__why-card">
-                    <img src="/imagies/svg/why-pic-4.svg" alt="" class="inner__why-pic">
-                    <span class="inner__why-number">
-                        1.5K
-                    </span>
-                    <span class="inner__why-subtitle">
-                        CASES DONE
-                    </span>
-                </div>
-
-            </div>
-
+      <div class="inner__why">
+        <div class="inner__why-block--title">
+          <h2 class="inner__why-title">WHY CHOOSE US</h2>
+          <p class="inner__why-desc">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
         </div>
+
+        <div class="inner__why-cards">
+          <div class="inner__why-card">
+            <img
+              src="/imagies/svg/why-pic-1.svg"
+              alt=""
+              class="inner__why-pic"
+            />
+            <span class="inner__why-number"> 3K </span>
+            <span class="inner__why-subtitle"> CASES DONE </span>
+          </div>
+          <div class="inner__why-card">
+            <img
+              src="/imagies/svg/why-pic-2.svg"
+              alt=""
+              class="inner__why-pic"
+            />
+            <span class="inner__why-number"> 45 </span>
+            <span class="inner__why-subtitle"> HAPPY CUSTOMERS </span>
+          </div>
+          <div class="inner__why-card">
+            <img
+              src="/imagies/svg/why-pic-3.svg"
+              alt=""
+              class="inner__why-pic"
+            />
+            <span class="inner__why-number"> 12+ </span>
+            <span class="inner__why-subtitle"> AWARD WINNING </span>
+          </div>
+          <div class="inner__why-card">
+            <img
+              src="/imagies/svg/why-pic-4.svg"
+              alt=""
+              class="inner__why-pic"
+            />
+            <span class="inner__why-number"> 1.5K </span>
+            <span class="inner__why-subtitle"> CASES DONE </span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="section__practice">
-        <div class="wrapper__practice">
-          
-                <h2 class="inner__practice-title">
-                    Practice Advice
-                </h2>
-                <p class="inner__practice-dask">
-                    Problems trying to resolve the conflict between
-                    the two major realms of Classical physics: Newtonian mechanics
-                </p>
-            
-            <div class="practice-cards">
-                <div class="practice__card">
-                    <span class="practice__subtitle practice__subtitle--first">
-                        A single source
-                        of truth
-                    </span>
-                    <p class="practice__card-desk">
-                        Newton thought that
-                        light was made up of
-                        particles, but then it
-                        was discovered
-                    </p>
-                    <img src="/imagies/practice-pic-1.png" alt="" class="practce__card-pic">
+      <div class="wrapper__practice">
+        <h2 class="inner__practice-title">Practice Advice</h2>
+        <p class="inner__practice-dask">
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+
+        <div class="practice-cards">
+          <div class="practice__card">
+            <span class="practice__subtitle practice__subtitle--first">
+              A single source of truth
+            </span>
+            <p class="practice__card-desk">
+              Newton thought that light was made up of particles, but then it
+              was discovered
+            </p>
+            <img
+              src="/imagies/practice-pic-1.png"
+              alt=""
+              class="practce__card-pic"
+            />
+          </div>
+
+          <div class="practice__card">
+            <span class="practice__subtitle practice__subtitle--second">
+              Fastest way to organize
+            </span>
+            <p class="practice__card-desk">
+              “Quantum mechanics” is the description of the behaviour of matter
+            </p>
+            <img
+              src="/imagies/practice-pic-2.png"
+              alt=""
+              class="practce__card-pic"
+            />
+          </div>
+
+          <div class="practice__card">
+            <span class="practice__subtitle practice__subtitle--thirty">
+              Fastest way to take actionы
+            </span>
+            <p class="practice__card-desk">
+              They describe a universe consisting of bodies moving
+            </p>
+            <img
+              src="/imagies/practice-pic-3.png"
+              alt=""
+              class="practce__card-pic"
+            />
+          </div>
+
+          <div class="practice__card">
+            <span class="practice__subtitle practice__subtitle--fourty">
+              Work better together
+            </span>
+            <p class="practice__card-desk">
+              They finally obtained a consistent description of the behaviour
+            </p>
+            <img
+              src="/imagies/practice-pic-4.png"
+              alt=""
+              class="practce__card-pic"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section__business">
+      <div class="wrapper__business">
+        <div class="inner__title-blok">
+          <h2 class="title__business-one">
+            We are providing best business service.
+          </h2>
+          <p class="desc__business-one">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="info__block-business">
+            <img class="info__video__business" src="/imagies/media bg-cover.png" frameborder="0">
+        <button class="btn__video"></button></img>
+            <div class="info__block-business--punkts">
+                <div class="info__block-business--info">
+                <h2 class="info__title-business">Most trusted in 
+                    our field</h2>
+                <p class="info__desck-business">Most calendars are designed for teams. Slate 
+                    is designed for freelancers who want a 
+                    simple way to plan their schedule.</p>
                 </div>
+                <div class="info__block-garant--bussiness">
+                    <div class="info__title-garant">
+                        <p class="info__desc-garant">
+                            the quick fox jumps over the lazy dog
 
-                <div class="practice__card">
-                    <span class="practice__subtitle practice__subtitle--second">
-                        Fastest way to
-                        organize
-                    </span>
-                    <p class="practice__card-desk">
-                        “Quantum mechanics”
-                        is the description of the
-                        behaviour of matter
-                    </p>
-                    <img src="/imagies/practice-pic-2.png" alt="" class="practce__card-pic">
+                        </p>
+                        <span class="info__desc-sub--garant">
+                            Things on a very small scale ...
+                        </span>
+                    </div>
+
+                    <div class="info__title-garant">
+                        <p class="info__desc-garant">
+                            the quick fox jumps over the lazy dog
+
+                        </p>
+                        <span class="info__desc-sub--garant">
+                            Things on a very small scale ...
+                        </span>
+                    </div>
                 </div>
-
-                <div class="practice__card">
-                    <span class="practice__subtitle  practice__subtitle--thirty">
-                        Fastest way to
-                        take actionы
-                    </span>
-                    <p class="practice__card-desk">
-                        They describe a
-                        universe consisting of
-                        bodies moving
-                    </p>
-                    <img src="/imagies/practice-pic-3.png" alt="" class="practce__card-pic">
-                </div>
-
-                <div class="practice__card">
-                    <span class="practice__subtitle  practice__subtitle--fourty ">
-                        Work better
-                        together
-                    </span>
-                    <p class="practice__card-desk">
-                        They finally obtained
-                        a consistent description
-                        of the behaviour
-                    </p>
-                    <img src="/imagies/practice-pic-4.png" alt="" class="practce__card-pic">
-                </div>
-
-
             </div>
         </div>
     </section>
-
-</body>
-
+  </body>
 </html>
