end section business

--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
           </p>
         </div>
         <div class="info__block-business">
-            <img class="info__video__business" src="/imagies/media bg-cover.png" frameborder="0">
-        <button class="btn__video"></button></img>
+            <div class="info__video__business">
+        <button class="btn__video"></button>
+      </div>
             <div class="info__block-business--punkts">
                 <div class="info__block-business--info">
                 <h2 class="info__title-business">Most trusted in 
@@ -231,7 +232,7 @@
                     simple way to plan their schedule.</p>
                 </div>
                 <div class="info__block-garant--bussiness">
-                    <div class="info__title-garant">
+                    <div class="info__title-garant  title__garant-bg--first">
                         <p class="info__desc-garant">
                             the quick fox jumps over the lazy dog
 
@@ -241,7 +242,7 @@
                         </span>
                     </div>
 
-                    <div class="info__title-garant">
+                    <div class="info__title-garant   title__garant-bg--second">
                         <p class="info__desc-garant">
                             the quick fox jumps over the lazy dog
 
