start section form work in html

--- a/index.html
+++ b/index.html
@@ -255,5 +255,30 @@
             </div>
         </div>
     </section>
+
+    <div class="section__sponsors">
+      <div class="wrapper__sponsors">
+        <div class="cards__sponsors">
+          <ul class="cards__list-sponsors">
+            <li class="card__item-sponsors"><a href="" class="link__sponsors"></a></li>
+            <li class="card__item-sponsors"><a href="" class="link__sponsors"></a></li>
+            <li class="card__item-sponsors"><a href="" class="link__sponsors"></a></li>
+            <li class="card__item-sponsors"><a href="" class="link__sponsors"></a></li>
+            <li class="card__item-sponsors"><a href="" class="link__sponsors"></a></li>
+            <li class="card__item-sponsors"><a href="" class="link__sponsors"></a></li>
+          </ul>
+        </div>
+        <div class="sponsors__form">
+          <div class="sponsors__title">
+            Subscribe For Latest 
+Newsletter
+            <form action="" class="sponsors__form-block">
+              <input type="text" class="input__forms-sponsors">
+              <button class="btn__form-sponsors">Subscribe</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
